<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@drawable/menu_background">
	
	<ImageView
		android:id="@+id/ImageView01"
		style="@style/MenuLogo"/>
	
	<Button
		android:id="@+id/ButtonPlay" 
		android:text="@string/menu_play"
		style="@style/MenuButton"/>
		
	<Button
		android:id="@+id/ButtonOptions" 
		android:text="@string/menu_options"
		style="@style/MenuButton"/>
		
	<Button
		android:id="@+id/ButtonAbout" 
		android:text="@string/menu_about"
		style="@style/MenuButton"/>
		
	<Button
		android:id="@+id/ButtonQuit" 
		android:text="@string/menu_quit"
		style="@style/MenuButton"/>
</LinearLayout>
