<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@drawable/menu_background">
	
	<ImageView
		android:id="@+id/ImageLogo"
		style="@style/MenuLogo"/>
		
	<Button
		android:id="@+id/ButtonSingle" 
		android:text="@string/menu_single"
		style="@style/MenuButton"/>
		
	<Button
		android:id="@+id/ButtonMulti" 
		android:text="@string/menu_multi"
		style="@style/MenuButton"/>
		
	<Button
		android:id="@+id/ButtonTutorials" 
		android:text="@string/menu_tutorials"
		style="@style/MenuButton"/>
		
	<Button
		android:id="@+id/ButtonBack" 
		android:text="@string/menu_back"
		style="@style/MenuButton"/>
		
</LinearLayout>
