<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@drawable/menu_background">
	
	<ImageView
		android:id="@+id/ImageLogo"
		style="@style/MenuLogo"/>
		
	<Button
		android:id="@+id/ButtonSound" 
		android:text="@string/settings_sound"
		android:layout_marginTop="-30dp"
		style="@style/MenuButton"/>
		
	<Button
		android:id="@+id/ButtonVibration" 
		android:text="@string/settings_vibration"
		style="@style/MenuButton"/>
		
	<Button
		android:id="@+id/ButtonDifficulty" 
		android:text="@string/settings_difficulty"
		style="@style/MenuButton"/>
   	
   	<EditText android:id="@+id/Nickname" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:background="@drawable/menu_button_selector"
        android:paddingLeft="15dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="-10dp"/>

	<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="horizontal"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
		<Button
			android:id="@+id/ButtonApplyPrefs" 
			android:text="@string/settings_apply_prefs"
			android:layout_weight="0.5"
			style="@style/MenuButton"/>
		<Button
			android:id="@+id/ButtonBack" 
			android:text="@string/menu_back"
			android:layout_weight="0.5"
			style="@style/MenuButton"/>
	</LinearLayout>		
</LinearLayout>